monitoring/grafana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: gic-wesago
  annotations:
      prometheus.io/scrape: 'true'
      prometheus.io/port:   '3000'
spec:
  selector: 
    app: grafana
  type: NodePort  
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30000
